[tool.poetry]
name = "modelfreelv"
version = "0.1.0"
description = "Model-Free Voltage Estimation of Low Voltage Electrical Power Distribution Systems using Smart Meter Data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
jupyterlab = "^4.2.5"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
dss-python = "^0.15.7"
networkx = "^3.3"
xlrd = "^2.0.1"
jupyterlab-git = "^0.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
